kubernetes/_base/networking/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  labels:
    app: color-api
    tier: ingress

  annotations:
    kubernetes.io/ingress.global-static-ip-name: "<placeholder>"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 80
